tests/NormalTests/paczka1/fuzzy1/15207457.err
Error in line 3: nmPvO4w1mvZ S216 43,9
Error in line 4: nmPvO4w1mvZ A960 95,1
Error in line 15: nmPvO4w1mvZ A145 ?8,1
Error in line 21: L3YE9 A145 24,9
Error in line 23: L3YE9 A258 69,6
Error in line 25: 5MziPzuQN A960 65,3
Error in line 22: nmPvO4w1mvZ A145 26,6
Error in line 29: L3YE9 S216 43,9
Error in line 38: P4XMqrZ A258 93,3
